--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
-
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     compileSdkVersion 30
@@ -31,11 +31,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
     viewBinding {
         enabled = true
-    }
-    buildFeatures {
-        dataBinding true
     }
 }
 
@@ -53,9 +51,12 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     //Room
-    def room_version = "2.2.5"
+    def room_version = "2.3.0"
+
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+   // kapt "androidx.room:room-compiler:$room_version"
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -67,11 +68,20 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    kapt "android.arch.lifecycle:compiler:1.1.0"
 
     //Dagger Hilt
+
     implementation 'com.google.dagger:hilt-android:2.28.1-alpha'
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha01"
+    kapt 'com.google.dagger:hilt-android-compiler:2.28.1-alpha'
+    kapt "androidx.hilt:hilt-compiler:1.0.0-alpha01"
+
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-    kapt 'com.android.databinding:compiler:3.1.4'
+    //kapt 'com.github.bumptech.glide:compiler:4.11.0'
+
+    //work manager
+    implementation "androidx.work:work-runtime:2.5.0"
+   // implementation("androidx.hilt:hilt-work:1.0.0")
 }
