--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,8 @@ buildscript {
         google()
         jcenter()
     }
-    dependencies {
+    dependencies{
+    classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
         classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
